force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Individual_s_Outcome__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Individual_s_Outcome__c</fullName>
    <label>Individual&apos;s Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing Treatment</fullName>
            </value>
            <value>
                <fullName>Recovered</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>