force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Injury_or_Death__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Injury_or_Death__c</fullName>
    <description>SE-163 - Complaint Determination- Priority 1- If = Injury or Death regardless of other values on the form= Complaint</description>
    <label>Injury or Death</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blank</fullName>
                <default>true</default>
                <label>Blank</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Injury/Other Patient Involvement</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Asked but not provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>