force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Investigation_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Investigation_ID__c</fullName>
    <description>SE-163 - Care Comm specific field</description>
    <label>Investigation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>