force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Is_the_date_of_the_death_known__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Is_the_date_of_the_death_known__c</fullName>
    <label>Is the date of the death known?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>