force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_KB_Article__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_KB_Article__c</fullName>
    <formula>HRCSVC_Case__r.HRCSVC_CC_KB_Article__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KB Article</label>
    <type>Text</type>
</CustomField>