force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Last_Relevant_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Last_Relevant_Date__c</fullName>
    <description>SE-737</description>
    <formula>If ( AND( ISBLANK(HRCSVC_Case__c) ,ISBLANK( HRCSVC_Work_Order__c )), LastModifiedDate ,

If( ISBLANK( HRCSVC_Work_Order__c ),
(If( LastModifiedDate &gt;= HRCSVC_Case__r.LastModifiedDate, LastModifiedDate , HRCSVC_Case__r.LastModifiedDate)),

If( ISBLANK(HRCSVC_Case__c),
(If( LastModifiedDate &gt;= HRCSVC_Work_Order__r.LastModifiedDate, LastModifiedDate, HRCSVC_Work_Order__r.LastModifiedDate)),

If( NOT(AND( ISBLANK(HRCSVC_Case__c) ,ISBLANK( HRCSVC_Work_Order__c ))),
(If ( AND(LastModifiedDate &gt;= HRCSVC_Case__r.LastModifiedDate, LastModifiedDate &gt;= HRCSVC_Work_Order__r.LastModifiedDate), LastModifiedDate,
(If(HRCSVC_Case__r.LastModifiedDate &gt;= HRCSVC_Work_Order__r.LastModifiedDate,HRCSVC_Case__r.LastModifiedDate, HRCSVC_Work_Order__r.LastModifiedDate )))),null))))</formula>
    <label>Last Relevant Date</label>
    <type>DateTime</type>
</CustomField>