force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_medical_treatment_intervention__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_medical_treatment_intervention__c</fullName>
    <label>Was medical treatment provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>