force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Medical_Treatment_or_Intervention__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Medical_Treatment_or_Intervention__c</fullName>
    <inlineHelpText>What Medical Treatment/Intervention, if any, was Provided?</inlineHelpText>
    <label>Medical Treatment or Intervention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>