force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Occurrence_Date__c</fullName>
    <description>SE-2259 Updates to Manage Complaint flow</description>
    <label>Occurrence Date</label>
    <type>Date</type>
</CustomField>