force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Occurrence_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Occurrence_Location__c</fullName>
    <description>SE-163 - From existing repair template</description>
    <label>Occurrence Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>