force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Occurrence_Location_Complaint__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Occurrence_Location_Complaint__c</fullName>
    <description>SE-2259 Updates to Manage Complaint flow</description>
    <label>Occurrence Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cardio Rehab</fullName>
            </value>
            <value>
                <fullName>Dr. Office/Clinic</fullName>
            </value>
            <value>
                <fullName>Emergency Room</fullName>
            </value>
            <value>
                <fullName>Emergency Transport</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Nursing Home/Assisted Living</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient Room</fullName>
            </value>
            <value>
                <fullName>Surgical Room</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>