force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Occurrence_Location_Other__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Occurrence_Location_Other__c</fullName>
    <description>SE-2259 Updates to Manage Complaint flow</description>
    <label>Occurrence Location Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>