force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Part_Serial_and_or_Revision__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Part_Serial_and_or_Revision__c</fullName>
    <description>SE-163 - From existing repair template</description>
    <label>Part Serial # and/or Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>