force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Patient_Identifier__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Patient_Identifier__c</fullName>
    <label>Patient Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>