force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Patient_Identifier_PersonImpacted__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Patient_Identifier_PersonImpacted__c</fullName>
    <description>SE-2431 (Service Cloud 2.1)</description>
    <label>Patient Identifier/Person Impacted (firs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>