force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Platform_Version_GSS__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Platform_Version_GSS__c</fullName>
    <label>System Platform Version (GSS)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>