force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_PM_sticker_date_if_present__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_PM_sticker_date_if_present__c</fullName>
    <description>SE-163 - From existing repair template</description>
    <label>PM Sticker Date</label>
    <type>Date</type>
</CustomField>