force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_PM_Sticker_Present__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_PM_Sticker_Present__c</fullName>
    <description>SE-1537 -  created this field as it was part of FSL 2.0 and we were reverting back repair template to original as per QA.</description>
    <label>PM Sticker Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>