force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Preferred_Method_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Preferred_Method_of_Communication__c</fullName>
    <formula>IF(ISBLANK(TEXT( HRCSVC_Case__r.HRCSVC_Preferred_Contact_Override__c)),TEXT( HRCSVC_Contact__r.Preferred_Method_of_Communication__c   ),TEXT(HRCSVC_Case__r.HRCSVC_Preferred_Contact_Override__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Method of Communication</label>
    <type>Text</type>
</CustomField>