force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Problem__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Problem__c</fullName>
    <description>Formula that pulls the &quot;Problem/Resolution Reason&quot; from the Case onto the Complaint Qualification. SE-1033.</description>
    <formula>HRCSVC_Case__r.HRCSVC_Problem_Resolution_Reason__r.Name</formula>
    <label>Problem/Resolution Reason</label>
    <type>Text</type>
</CustomField>