force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Product_Feature_Component__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Feature_Component__c</fullName>
    <description>Formula that pulls the &quot;Main - Sub Assembly&quot; from the Case onto the Complaint Qualification. SE-1033.</description>
    <formula>HRCSVC_Case__r.HRCSVC_Main_Sub_Assembly__r.Name</formula>
    <label>Main - Sub Assembly</label>
    <type>Text</type>
</CustomField>