force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Group__c</fullName>
    <description>Formula that pulls the Complaint Code List by Product from the Case onto the Complaint Qualification. SE-1033.</description>
    <formula>HRCSVC_Case__r.HRCSVC_Complaint_Code__r.Name</formula>
    <label>Code List by Product</label>
    <type>Text</type>
</CustomField>