force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Product_Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Problem_Code__c</fullName>
    <description>Formula that pulls the &quot;As Reported - Customer Experience&quot; from the Case onto the Complaint Qualification. SE-1033.</description>
    <formula>HRCSVC_Case__r.HRCSVC_As_Reported__r.Name</formula>
    <label>As Reported - Customer Experience</label>
    <type>Text</type>
</CustomField>