force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quantity__c</fullName>
    <description>SE-1023</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>