force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Real_ETQ_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Real_ETQ_Complaint_Number__c</fullName>
    <description>SE-2034 - Will hold Complaint Number from ETQ</description>
    <externalId>true</externalId>
    <label>HRCSVC Real ETQ Complaint Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>