force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Resolution__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Resolution__c</fullName>
    <description>SE-163 - Resolution will be required for complaint closure, but not necessarily required at the time of submission to ETQ</description>
    <label>Resolution</label>
    <type>TextArea</type>
</CustomField>