force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Resolution_Complete__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Resolution_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that captures whether the Resolution Screen has been filled out for a Complaint Qualification.</description>
    <label>Resolution Complete</label>
    <type>Checkbox</type>
</CustomField>