force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Return_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Return_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Order Line Item</label>
    <referenceTo>ReturnOrderLineItem</referenceTo>
    <relationshipLabel>Complaint Qualifications</relationshipLabel>
    <relationshipName>Complaint_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>