force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Second_Account__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Second_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Complaint Qualifications (Second Account)</relationshipLabel>
    <relationshipName>Complaint_Qualifications1</relationshipName>
    <type>Lookup</type>
</CustomField>