force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Second_device_relationship_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Second_device_relationship_Model__c</fullName>
    <description>SE-163 - From existing repair template</description>
    <label>Second device relationship Model #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>