force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Source_Of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Source_Of_Complaint__c</fullName>
    <label>Source Of Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Distributor/Authorized Service Personnel</fullName>
            </value>
            <value>
                <fullName>Regulatory Agency</fullName>
            </value>
            <value>
                <fullName>Hill-Rom Service Personnel</fullName>
            </value>
            <value>
                <fullName>Company Representative-Other Hill-Rom Employee (Sales; Marketing; etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>