force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Specific_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Specific_Error_Message__c</fullName>
    <label>Specific Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>