force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Status__c</fullName>
    <description>SE-163 - Value is determined off the Priority Complaint Values</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not a Complaint</fullName>
            </value>
            <value>
                <fullName>Qualified Complaint</fullName>
            </value>
            <value>
                <fullName>Cloned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>