force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_System_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_System_Location__c</fullName>
    <formula>HRCSVC_Asset__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Location</label>
    <type>Text</type>
</CustomField>