force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Test_performed_per_service_manual__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Test_performed_per_service_manual__c</fullName>
    <description>SE-163 - From existing repair template</description>
    <label>Test performed per service manual</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Visual</fullName>
            </value>
            <value>
                <fullName>Audible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>