force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_UDI__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_UDI__c</fullName>
    <formula>IF(HRCSVC_Case__r.RecordType.Name = &quot;Care Comm&quot;, HRCSVC_Asset__r.HRCSVC_UDI__c, HRCSVC_Asset__r.HRCFSL_UDI__c)</formula>
    <label>UDI</label>
    <type>Text</type>
</CustomField>