force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Weight__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Weight__c</fullName>
    <label>Weight</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>