force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Weight_unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Weight_unit_of_measure__c</fullName>
    <label>Weight unit of measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pounds</fullName>
            </value>
            <value>
                <fullName>Kilograms</fullName>
            </value>
            <value>
                <fullName>Grams</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>