force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_What_is_the_date_of_the_death__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_What_is_the_date_of_the_death__c</fullName>
    <label>What is the date of the death?</label>
    <type>Date</type>
</CustomField>