force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_What_was_the_Injury__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_What_was_the_Injury__c</fullName>
    <label>What was the Injury</label>
    <length>255</length>
    <type>Text</type>
</CustomField>