force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/HRCSVC_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Complaint Qualifications</relationshipLabel>
    <relationshipName>Complaint_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>