force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/Integration_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Integration_Product_Code__c</fullName>
    <formula>HRCSVC_Case__r.Product.ProductCode</formula>
    <label>Integration Product Code</label>
    <type>Text</type>
</CustomField>