force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/fields/Integration_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Integration_Product_Description__c</fullName>
    <formula>HRCSVC_Case__r.Product.Description</formula>
    <label>Integration Product Description</label>
    <type>Text</type>
</CustomField>