force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/validationRules/HRCSVC20_Describe_Cause_Reqd_On_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC20_Describe_Cause_Reqd_On_Closure</fullName>
    <active>false</active>
    <description>#SE-2785: &apos;Describe Cause, Troubleshooting&apos; field is required to close a Case(with CQ)</description>
    <errorConditionFormula>AND(
 NOT($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c),
 OR( ISPICKVAL(HRCSVC_Case__r.Status , &apos;Resolved&apos;),
          ISPICKVAL(HRCSVC_Case__r.Status, &apos;Closed&apos;)),
 ISBLANK( HRCSVC20_Describe_Cause_Troubleshooting__c ) )</errorConditionFormula>
    <errorMessage>You cannot close a Case if the Describe Cause, Troubleshooting field on the Complaint Qualification record has not been filled in.</errorMessage>
</ValidationRule>