force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/validationRules/HRCSVC20_Resolution_Reqd_On_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC20_Resolution_Reqd_On_Closure</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c),
 OR( ISPICKVAL(HRCSVC_Case__r.Status , &apos;Resolved&apos;),
          ISPICKVAL(HRCSVC_Case__r.Status, &apos;Closed&apos;)),
 ISBLANK(  HRCSVC_Resolution__c  ) )</errorConditionFormula>
    <errorDisplayField>HRCSVC_Account__c</errorDisplayField>
    <errorMessage>You cannot close a Case if the Resolution field on the Complaint Qualification record has not been filled in.</errorMessage>
</ValidationRule>