force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/validationRules/HRCSVC20_surface_device_reqd_repairtempl.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC20_surface_device_reqd_repairtempl</fullName>
    <active>false</active>
    <description>#SE-2431: Second device relationship (i.e. surface/sling) Model # / Serial # is reqd on repair template closure</description>
    <errorConditionFormula>AND(
 NOT( $Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c ),
 ISPICKVAL( HRCSVC_Work_Order__r.Status , &apos;SC&apos;),
  ISBLANK( HRCSVC_Work_Order__r.HRCFSL_Repair_Template_Question_8B__c ) 

)</errorConditionFormula>
    <errorDisplayField>HRCSVC_Account__c</errorDisplayField>
    <errorMessage>Please fill in Second device relationship on repair template</errorMessage>
</ValidationRule>