force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/validationRules/HRCSVC_Prevent_Editing_the_ETQ_Workflow.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Prevent_Editing_the_ETQ_Workflow</fullName>
    <active>true</active>
    <description>#SE-1422: VR created to prevent the users from editing the HRCSVC_Found_ETQ_Workflow__c field on a existing CQ record</description>
    <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( HRCSVC_Found_ETQ_Workflow__c ))</errorConditionFormula>
    <errorMessage>ETQ Workflow field can not be modified once set</errorMessage>
</ValidationRule>