force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/validationRules/HRCSVC_Prevent_Muliple_Complaint_On_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Prevent_Muliple_Complaint_On_Case</fullName>
    <active>true</active>
    <description>Prevent creation of multiple complaint qualification record on case
Developed for #SE-142</description>
    <errorConditionFormula>AND(NOT($Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c),OR(ISCHANGED(HRCSVC_Case__c),ISNEW()), HRCSVC_Existing_CQ_with_case__c)</errorConditionFormula>
    <errorMessage>There is an existing Complaint Qualification for this case.</errorMessage>
</ValidationRule>