force-app/main/default/objects/HRCSVC_Complaint_Qualification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HRCSVC_ETQ_Complaint_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HRCSVC_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>